force-app/main/default/objects/User/fields/Scratch_Org_Alert_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Scratch_Org_Alert_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows a user to opt into receiving Scratch Org expiration alerts.</description>
    <label>Scratch Org Alert Enabled</label>
    <type>Checkbox</type>
</CustomField>