force-app/main/default/objects/User/fields/Scratch_Org_Alert_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Scratch_Org_Alert_Recipient__c</fullName>
    <description>The email address that is notified by the Scratch Org Alert app.</description>
    <label>Scratch Org Alert Recipient</label>
    <type>Email</type>
</CustomField>