force-app/main/default/objects/User/fields/ScratchOrgAlertNotificationDays__c.field-meta.xml
<CustomField>
    <fullName>ScratchOrgAlertNotificationDays__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of days before a Scratch Org&#39;s expiration that a user should be alerted for.</description>
    <label>Scratch Org Alert Notification Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>