force-app/main/default/objects/User/fields/ScratchOrgAlertRecipient__c.field-meta.xml
<CustomField>
    <fullName>ScratchOrgAlertRecipient__c</fullName>
    <description>The email address that is notified by the Scratch Org Alert app.</description>
    <label>Scratch Org Alert Recipient</label>
    <type>Email</type>
</CustomField>